language/move-lang/tests/move_check/expansion/restricted_alias_names.exp
error: 

   ┌── tests/move_check/expansion/restricted_alias_names.move:9:16 ───
   │
 9 │         foo as address,
   │                ^^^^^^^ Invalid module member name 'address'. 'address' is restricted and cannot be used to name a module member
   │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:10:16 ───
    │
 10 │         foo as signer,
    │                ^^^^^^ Invalid module member name 'signer'. 'signer' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:11:16 ───
    │
 11 │         foo as u8,
    │                ^^ Invalid module member name 'u8'. 'u8' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:12:16 ───
    │
 12 │         foo as u64,
    │                ^^^ Invalid module member name 'u64'. 'u64' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:13:16 ───
    │
 13 │         foo as u128,
    │                ^^^^ Invalid module member name 'u128'. 'u128' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:14:16 ───
    │
 14 │         foo as vector,
    │                ^^^^^^ Invalid module member name 'vector'. 'vector' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:15:16 ───
    │
 15 │         foo as move_to_sender,
    │                ^^^^^^^^^^^^^^ Invalid module member name 'move_to_sender'. 'move_to_sender' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:16:16 ───
    │
 16 │         foo as move_to,
    │                ^^^^^^^ Invalid module member name 'move_to'. 'move_to' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:17:16 ───
    │
 17 │         foo as move_from,
    │                ^^^^^^^^^ Invalid module member name 'move_from'. 'move_from' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:18:16 ───
    │
 18 │         foo as borrow_global,
    │                ^^^^^^^^^^^^^ Invalid module member name 'borrow_global'. 'borrow_global' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:19:16 ───
    │
 19 │         foo as borrow_global_mut,
    │                ^^^^^^^^^^^^^^^^^ Invalid module member name 'borrow_global_mut'. 'borrow_global_mut' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:20:16 ───
    │
 20 │         foo as exists,
    │                ^^^^^^ Invalid module member name 'exists'. 'exists' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:21:16 ───
    │
 21 │         foo as freeze,
    │                ^^^^^^ Invalid module member name 'freeze'. 'freeze' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:22:16 ───
    │
 22 │         foo as assert,
    │                ^^^^^^ Invalid module member name 'assert'. 'assert' is restricted and cannot be used to name a module member
    │

error: 

    ┌── tests/move_check/expansion/restricted_alias_names.move:23:16 ───
    │
 23 │         foo as Self,
    │                ^^^^ Invalid module member name 'Self'. 'Self' is restricted and cannot be used to name a module member
    │

